--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,6 +1,65 @@
-.{
-	margin: 0 auot;
-	width: 100%;
+body{
+	background: url("https://media.giphy.com/media/3o7TKBOV961Ok9m0zC/giphy.gif");
+		position: fixed;
+		top: 50%;
+	left: 50%;
+	min-width: 100%;
+	min-width: 100%;
+	width: auto;
+	height: auto;
+	transform: translateX(-50%) translateY(-50%);
+	background-size: cover;
+	transition: 1s opacity;
+
+}
+
+.text1{
+	margin-top: 0px;
+	font-family: Times;
+	font-size: 60px;	
+	color: white;
+	text-align: center;
+	opacity: .8;
+	} 
+.text2{
+	font-family: Times;
+	font-size: 20px;
+	color: white;
+}
+
+
+
+.pt{
+
+	font-family: Times;
+	font-size: 15px;
+	color: white;
+}
+
+.pbody{
+	font-family: Times;
+	color: white;
+}
+
+.ptitle{
+	font-family: Times;
+	color: white;
+}
+
+input{
+	background-color: grey;
+	opacity: .5;
+	font-family: Times;
+	color: white;
+}
+
+#addTrainBtn{
+		background-color: black;
+		border: none;
+		opacity: .4;
+
+	
+	
 }
 
 
