--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background: url("https://media.giphy.com/media/3o7TKBOV961Ok9m0zC/giphy.gif");
+	background: ur l("https://media.giphy.com/media/3o7TKBOV961Ok9m0zC/giphy.gif");
 		position: fixed;
 		top: 50%;
 	left: 50%;
@@ -10,6 +10,8 @@ body{
 	transform: translateX(-50%) translateY(-50%);
 	background-size: cover;
 	transition: 1s opacity;
+
+	
 
 }
 
@@ -54,14 +56,23 @@ input{
 }
 
 #addTrainBtn{
-		background-color: black;
+		display: block;
+		width: 40%;
+		padding: 10px;
 		border: none;
-		opacity: .4;
-
-	
-	
+		margin: 1rem auto;
+		font-size: 12px;
+		color:#fff;
+		background-color: black;
+		border-radius: 3px;
+		cursor: pointer;
+		border: none;
+		opacity: .7;
 }
 
+#addTrainBtn:hover{
+	background: #708090;
+}
 
 .form-local{
 
